Link lightbox metadata to X
